Changes to CSS to ensure adequate contrast on merch prich

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
 #logo {
     font-family: 'Pacifico', sans-serif;
     letter-spacing: 3px;
-    color:#ca5005; 
+    color:#c24d04; 
     text-decoration: none;    
     padding-top: 20px;
     width:100%;
@@ -146,6 +146,10 @@ body {
 
 .card button:hover {
   opacity: 0.7;
+}
+
+.pbtn {
+    color:#c24d04;
 }
     
 /*------- Review Slideshow------ */
@@ -348,7 +352,6 @@ increases playlist size to fill col*/
 
     #discog {
         font-size:90%;
-        text-align:left;
     }
 }
 
@@ -359,7 +362,7 @@ increases playlist size to fill col*/
     }
 
     #logo {
-        padding-left:70px;
+        padding-left:65px;
     }
 
     .social-menu {
@@ -475,6 +478,7 @@ increases playlist size to fill col*/
     color:white;
     padding-top:5px;
 }
+
 
 /*-----Galllery-----------*/
 
